styles: updated styles

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,47 @@
   text-align: center;
 }
 
-.my-canvas {
-  width: 80%;
-  background-color: aliceblue;
+h1 {
+  color: #adb9e2;
+}
+
+.search-parent {
+  position: fixed;
+  inset: 0;
+  width: 36%;
+  height: 90%;
+  margin: auto;
+  z-index: 5;
+  pointer-events: none;
+}
+
+.search-bar {
+  padding: 0.7rem 1.2rem;
+  border-radius: 5px;
+  border: none;
+  font-size: large;
+  position: absolute;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  transform: translate(-10%, 85%);
+  opacity: 0.8;
+  background-color: #212121;
+  color: rgb(255, 255, 255);
+  pointer-events: all;
+}
+
+.search-bar::placeholder {
+  color: rgba(255, 255, 255, 0.795);
+}
+
+.search-bar:focus {
+  outline: none;
+}
+
+.search-icon {
+  position: relative;
+  top: 45px;
+  left: 215px;
+  opacity: 0.8;
 }
